src/main/jkube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /microjakarta10(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: microjakarta10
                port:
                  number: 8080
  ingressClassName: nginx
